@@ -1,0 +1,39 @@
+PREHOOK: query: -- Tests the case where a table is changed from sequence file to a RC file,
+-- resulting in partitions in both file formats. If no valid partitions are
+-- selected, then it should still use RC file for reading the dummy partition.
+CREATE TABLE part_test (key STRING, value STRING) PARTITIONED BY (ds STRING) STORED AS SEQUENCEFILE
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: -- Tests the case where a table is changed from sequence file to a RC file,
+-- resulting in partitions in both file formats. If no valid partitions are
+-- selected, then it should still use RC file for reading the dummy partition.
+CREATE TABLE part_test (key STRING, value STRING) PARTITIONED BY (ds STRING) STORED AS SEQUENCEFILE
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@part_test
+PREHOOK: query: ALTER TABLE part_test ADD PARTITION(ds='1')
+PREHOOK: type: ALTERTABLE_ADDPARTS
+POSTHOOK: query: ALTER TABLE part_test ADD PARTITION(ds='1')
+POSTHOOK: type: ALTERTABLE_ADDPARTS
+POSTHOOK: Output: default@part_test@ds=1
+PREHOOK: query: ALTER TABLE part_test SET FILEFORMAT RCFILE
+PREHOOK: type: null
+POSTHOOK: query: ALTER TABLE part_test SET FILEFORMAT RCFILE
+POSTHOOK: type: null
+POSTHOOK: Input: default@part_test
+POSTHOOK: Output: default@part_test
+PREHOOK: query: ALTER TABLE part_test ADD PARTITION(ds='2')
+PREHOOK: type: ALTERTABLE_ADDPARTS
+POSTHOOK: query: ALTER TABLE part_test ADD PARTITION(ds='2')
+POSTHOOK: type: ALTERTABLE_ADDPARTS
+POSTHOOK: Output: default@part_test@ds=2
+PREHOOK: query: SELECT count(1) FROM part_test WHERE ds='3'
+PREHOOK: type: QUERY
+PREHOOK: Output: file:/data/users/pyang/task/trunk/VENDOR.hive/trunk/build/ql/scratchdir/hive_2010-06-15_10-14-51_112_6812982446306518733/10000
+POSTHOOK: query: SELECT count(1) FROM part_test WHERE ds='3'
+POSTHOOK: type: QUERY
+POSTHOOK: Output: file:/data/users/pyang/task/trunk/VENDOR.hive/trunk/build/ql/scratchdir/hive_2010-06-15_10-14-51_112_6812982446306518733/10000
+0
+PREHOOK: query: DROP TABLE part_test
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE part_test
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@part_test
